<resources>
    <string name="app_name">SensAir</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- Preference Titles -->
    <string name="user_settings">Your Air Quality Profile</string>
    <string name="app_settings">System Settings</string>

    <!-- Messages Preferences -->
    <string name="user_name">Name</string>
    <string name="reply_title">Meter Preference</string>
    <string name="altitude_setting_title_max">Maximum Altitude Threshold</string>
    <string name="altitude_setting_summary_max">Set a custom maximum altitude threshold that will cause a notification</string>
    <string name="altitude_setting_title_min">Minimum Altitude Threshold</string>
    <string name="altitude_setting_summary_min">Set a custom minimum altitude threshold that will cause a notification</string>
    <string name="temperature_setting_title_max">Maximum Temperature Threshold</string>
    <string name="temperature_setting_summary_max">Set a custom maximum temperature threshold in degrees Celsius that will causes a notification</string>
    <string name="temperature_setting_title_min">Minimum Temperature Threshold</string>
    <string name="temperature_setting_summary_min">Set a custom minimum temperature threshold in degrees Celsius that will causes a notification</string>
    <string name="pressure_setting_title_max">Maximum Pressure Threshold</string>
    <string name="pressure_setting_summary_max">Set a custom maximum pressure threshold that will cause a notification</string>
    <string name="pressure_setting_title_min">Minimum Pressure Threshold</string>
    <string name="pressure_setting_summary_min">Set a custom minimum pressure threshold that will cause a notification</string>
    <string name="humidity_setting_title_max">Maximum Humidity Threshold</string>
    <string name="humidity_setting_summary_max">Set a custom maximum humidity threshold that will cause a notification</string>
    <string name="humidity_setting_title_min">Minimum Humidity Threshold</string>
    <string name="humidity_setting_summary_min">Set a custom minimum humidity threshold that will cause a notification</string>

    <!-- Sync Preferences -->
    <string name="allow_notifications">Critical Air Quality Alerts</string>
    <string name="allow_notifications_description">Notifies you when Air Quality is dangerously harmful.</string>
    <string name="data_setting_title">Data Collection</string>
    <string name="data_setting_description">Allows SensAir to collect data about your air quality.</string>
    <string name="title_activity_real_time">Real Time Air Quality</string>
    <string name="title_hazardous_gasses">Hazardous Gasses</string>
    <string name="title_ambient_air_quality">Ambient Air Quality</string>
    <string name="title_historyactivity_list">History</string>
    <string name="title_historyactivity_detail">HistoryActivity  Detail</string>
    <string name="title_activity_real_time_quality">RealTimeQualityActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="session_avg"><u>Session Average:</u></string>

    <string name="data_setting_altitude_title">Critical Altitude Alerts</string>
    <string name="data_setting_altitude_description">Notifies you when the altitude is above the custom set threshold</string>
    <string name="data_setting_temperature_title">Critical Temperature Alert</string>
    <string name="data_setting_temperature_description">Notifies you when the temperature is above or below the custom set threshold</string>
    <string name="data_setting_pressure_title">Critical Pressure Alerts</string>
    <string name="data_setting_pressure_description">Notifies you when the pressure is above the custom set threshold</string>
    <string name="data_setting_humidity_title"> Critical Humidity Alerts</string>
    <string name="data_setting_humidity_description">Notifies you when the humidity is above or below the custom set thresholds</string>

    <!-- root preferences Key Strings -->
    <string name="altitude_setting_state">SettingAltitudeState</string>
    <string name="pressure_setting_state">SettingPressureState</string>
    <string name="temperature_setting_state">SettingTemperatureState</string>
    <string name="humidity_setting_state">SettingHumidityState</string>
    <string name="altitude_max_setting_threshold">SettingMaximumAltitudeThreshold</string>
    <string name="altitude_min_setting_threshold">SettingMinimumAltitudeThreshold</string>
    <string name="pressure_max_setting_threshold">SettingMaximumPressureThreshold</string>
    <string name="pressure_min_setting_threshold">SettingMinimumPressureThreshold</string>
    <string name="temperature_max_setting_threshold">SettingMaximumTemperatureThreshold</string>
    <string name="temperature_min_setting_threshold">SettingMinimumTemperatureThreshold</string>
    <string name="humidity_max_setting_threshold">SettingMaximumHumidityThreshold</string>
    <string name="humidity_min_setting_threshold">SettingMinimumHumidityThreshold</string>

</resources>