<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_settings">

        <EditTextPreference
            app:key="Name"
            app:title="@string/user_name"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/gauge_option_entries"
            app:entryValues="@array/gauge_option_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:summary="Set what measurement is displayed on the Home Page meter." />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_settings">

        <SwitchPreferenceCompat
            app:key="Notifications"
            app:title="@string/allow_notifications"
            app:summary="@string/allow_notifications_description"/>

        <SwitchPreferenceCompat
            app:key="attachment"
            app:title="@string/data_setting_title"
            app:summary="@string/data_setting_description"/>

    </PreferenceCategory>

</PreferenceScreen>